<resources>
    <string name="app_name">MyWeatherApp</string>

    <string name="settings">Settings</string>

    <string name="celsius">°C</string>
    <string name="fahrenheit">°F</string>

    <string name="tempUnit">Temperature Unit</string>
    <string name="DesLang">Description Language</string>

    <string name="En">EN</string>
    <string name="Pt">PT</string>
    <string name="save_settings">Settings saved with sucess</string>

</resources>
